# trivial-engine

./: .gitignore  CMakeLists.txt  clean.sh  readme.md  readme.txt  run.sh  todo.txt  trivial.layout.cbTemp  trivialbuild.py
Asteroid/: AsterScene.h  Asteroid.layout.cbTemp  CMakeLists.txt  asteroids.h  main.cpp  pause.h
Breakout/: Ball.h  BreakOut  Breakout.layout.cbTemp  Brick.h  CMakeLists.txt  GUITextInput.h  Paddle.h  Player.h  TrivialButton.h  TrivialMaskCollision.h  TrivialProgressBar.h  Vehicle.h  animatedCharacter.h  autoCab.h  autoMount.h  autoMountGameOverScene.h  autoMountGameWinScene.h  autoMountMenu.h  breakOutScene.h  bus.h  cars.h  helpers.h  main.cpp
RFC/resource script/: config.cfg  level_1_1.py  level_1_1.scene  level_1_1.section  resource.xml  resource_config_scene_script_RFC.txt  titleScreen.py
TrivialTemplate/src/: base_scene.h
audiophila/: main.cpp
audiophila/src/: base_scene.h
basecode/: basecode.txt
basecode/src/: base_scene.h
byog12/: byog12.layout.cbTemp  main.cpp  trivial.xml
byog12/data/: iso_tileset.psd  tilemap.psd  tileset.gal  tileset.psd
byog12/design/: Main Menu.mm
byog12/maps/: assasinate.tmx  stroll.tmx
byog12/sound/: captions.txt
byog12/src/: Map.h  flmd_splash.h
docs/: doxyfile
extlibs/tinyxml/: CMakeLists.txt  Makefile
html/: features.txt  index.html  what is this.txt
html/css/: bootstrap.css
python/: build.sh  foo.py  trivial.cpp  trivial.py
sheetTester/: main.cpp  sheetTester.config
sheetTester/src/: base_scene.h
src/: CMakeLists.txt  TrivialAnimatedSprite.cpp  TrivialAnimatedSprite.h  TrivialAnimation.h  TrivialApp.cpp  TrivialApp.h  TrivialAudioManager.cpp  TrivialAudioManager.h  TrivialAudioResource.h  TrivialBox2D.cpp  TrivialBox2D.h  TrivialButton.h  TrivialCamera.cpp  TrivialCamera.h  TrivialCanvas.cpp  TrivialCanvas.h  TrivialEngine.h  TrivialEventManager.cpp  TrivialEventManager.h  TrivialFontManager.cpp  TrivialFontManager.h  TrivialGUIObject.cpp  TrivialGUIObject.h  TrivialGUIText.cpp  TrivialGUIText.h  TrivialGraphicsObject.cpp  TrivialGraphicsObject.h  TrivialGroup.cpp  TrivialGroup.h  TrivialHelper.h  TrivialImageManager.cpp  TrivialImageManager.h  TrivialObject.cpp  TrivialObject.h  TrivialScene.cpp  TrivialScene.h  TrivialSceneManager.cpp  TrivialSceneManager.h  TrivialSceneObject.cpp  TrivialSceneObject.h  (+5 more)
test/: Ball.h  Brick.cpp  CMakeLists.txt  TrivialCanvas.cpp  TrivialCanvas.h  main.cpp  mouseDrawing.h  myScene.h  pause.h  quadTreeTest.h  test.layout.cbTemp  testCanvas.h  testScrollBg.h  thousandBooms.h
test/Breakout/: CMakeLists.txt  Paddle.h  breakOutScene.h
test/data/: pausetext.psd
test/data/.svn/: all-wcprops  entries
test/data/.svn/text-base/: childSmall.png.svn-base  maenamMono.ogg.svn-base  testImage.jpg.svn-base
